# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# --------------------------------------------------------------------------

[package]
name = "sawtooth-raft"
version = "0.1.0"
authors = ["Intel Corporation"]
description = "Hyperledger Sawtooth Raft consensus engine"

[package.metadata.deb]
maintainer = "sawtooth"
depends = "$auto,rsyslog"
assets = [
    ["packaging/systemd/sawtooth-raft.service", "/lib/systemd/system/sawtooth-raft.service", "644"],
    ["packaging/systemd/sawtooth-raft", "/etc/default/sawtooth-raft", "644"],
    ["target/release/sawtooth-raft", "/usr/bin/sawtooth-raft", "755"]
]
maintainer-scripts = "packaging/ubuntu"

[dependencies]
clap = "2"
hex = "0.3"
log = "0.4"
log4rs = "0.8"
log4rs-syslog = "3.0"
protobuf = "2"
raft = "0.3.1"
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
serde_json = "1"
uluru = "0.2"

[patch.crates-io]
log4rs = { git = "https://github.com/ltseeley/log4rs", branch = "config-loading" }

[dev-dependencies]
tempfile = "3.0.4"
